Alles um die Ingame-Ansicht herum ist fertig, Bugs nicht ausgeschlossen.